fix: duplicate genres in film in put